# rag-p

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  Makefile  README.md  answers.md  opportunity.md  package.json  pnpm-lock.yaml  pyproject.toml  roadmap.md
apps/api/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_init.py  0002_chunks_embedding_dim_1024.py  0003_auth_and_api_keys.py  0004_pipeline_dataset_link.py  0005_dataset_golden_qa.py  0006_org_members.py  0007_audit_events.py  0008_usage_tracking.py  0009_billing.py  0010_yookassa.py  0011_subscriptions.py  0012_reduce_plan_storage_quotas.py  0013_document_storage_metadata.py  0014_api_key_lifecycle.py  0014_experiment_updated_at.py  0015_account_deletion.py  0016_account_deletion.py  0016_api_key_lifecycle.py  0017_password_reset_tokens.py  0018_add_chunker_name_to_documents.py  0018_increase_embedding_dim.py  0019_drop_golden_source_chunk_id.py
apps/api/src/ragp_api/: __init__.py  deps.py  deps_auth.py  main.py  settings.py
apps/api/tests/: conftest.py  test_api_keys.py  test_audit.py  test_audit_expanded.py  test_billing.py  test_billing_emails.py  test_billing_webhook_security.py  test_experiment_watchdog.py  test_golden_qa.py  test_litellm_generator.py  test_login_rate_limit.py  test_org_members.py  test_password_reset.py  test_pipeline_runner.py  test_plugins_registry.py  test_queue_envelope.py  test_queue_quota.py  test_queue_split.py  test_rate_limit.py  test_routes_auth.py  test_routes_datasets.py  test_routes_experiments.py  test_routes_keys.py  test_routes_pipelines.py  test_routes_plugins.py  test_routes_rag.py  test_subscription_service.py  test_usage.py  test_user_data.py  test_yookassa.py
apps/api/tests/plugins/: __init__.py  test_bge_reranker.py  test_cohere_proxy.py
docs/: architecture.md  (+12 more)
(+284 files in other folders)
