[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragp-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pgvector>=0.3.0",
    "litellm>=1.40.0",
    "cohere>=5.5.0",
    "langchain-text-splitters>=0.2.0",
    "ragas>=0.1.0",
    "langfuse>=2.0.0",
    "httpx>=0.27.0",
    "jsonschema>=4.22.0",
    "argon2-cffi>=23.1.0",
    "itsdangerous>=2.2.0",
    "email-validator>=2.1.0",
    "pypdf>=4.3.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "anyio>=4.4.0",
    "aiosqlite>=0.20.0",
]

[project.entry-points."ragp.plugins.chunkers"]
recursive-character = "ragp_api.plugins.chunkers.recursive:RecursiveCharacterChunker"
markdown-aware = "ragp_api.plugins.chunkers.markdown:MarkdownAwareChunker"

[project.entry-points."ragp.plugins.embedders"]
litellm-embedder = "ragp_api.plugins.embedders.litellm_embedder:LiteLLMEmbedder"

[project.entry-points."ragp.plugins.retrievers"]
pgvector-hybrid = "ragp_api.plugins.retrievers.pgvector_hybrid:PgvectorHybridRetriever"

[project.entry-points."ragp.plugins.rerankers"]
cohere = "ragp_api.plugins.rerankers.cohere:CohereReranker"

[project.entry-points."ragp.plugins.generators"]
litellm-generator = "ragp_api.plugins.generators.litellm_generator:LiteLLMGenerator"

[tool.hatch.build.targets.wheel]
packages = ["src/ragp_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
